# sprint_8

./: CMakeLists.txt  README.md  check_refactor.sh  run_clang_format.sh
.devcontainer/: Dockerfile
include/: RefactorTool.h
src/: CMakeLists.txt  RefactorTool.cpp
tests/: CMakeLists.txt  test.cpp
tests/tests_data/: for_refactor.cpp  leak_example.cpp  perf_example.cpp  test1.cpp  test1_ref.cpp  test2.cpp  test2_ref.cpp  test3.cpp  test3_ref.cpp
